# ChaacSight

./: .gitignore  README.md  pyproject.toml  requirements-intelpython.txt  requirements.txt
data/manipulated_data/: allMAE.json  distances.csv  exogen.json  hyperparameter_combinations.csv  ncrainfalldata.csv  predictions.csv  rainfalldata.csv
data/raw_data/: NC Monthly Precipitation Data.xlsx  latlong.csv
dockerconfig/: install_IntelMKL.sh
scripts/: README.md  SuspendPowerPlan.ps1  build-vm.sh  build.py  build.sh  bump-version.py  bumpversion.py  deploy.sh  deploy_vm.py
scripts/.git-hooks/: commit-msg  hook-utils.sh  post-checkout  post-commit  post-merge  post-rewrite  pre-push  prepare-commit-msg
scripts/ansible/: ansible.cfg  ansible_hosts  app.yml  cleanup.yml  deploy-app-vm.yml  gce-instances.yml  local-prep.yml  monitoring.yml
scripts/ansible/etc_vars/: .gitignore
scripts/ansible/gce_vars/: auth  machines  zone
scripts/ansible/group_vars/: all
scripts/ansible/roles/configure/tasks/: create-admin.yml  create-app-service.yml  main.yml  mount-persistent-disk.yml  security-lockdown.yml
src/: Data_Wrangling_CAP1.ipynb  Exogenous_Variables.ipynb  Future_Predictions.ipynb  main.py  shasum.py
src/chaac/: DataWranglingHandler.py  EventHandlerRegistration.py  FindExogLocationsHandler.py
src/insight/client/: .dockerignore  .eslintrc.js  .gitignore  .prettierrc  Dockerfile  README.md  nginx.conf  package.json
src/insight/client/src/: App.vue  main.js
src/insight/server/: .gitignore  Dockerfile
src/lib/: geolib.py
(+26 files in other folders)
